# compiler-quarkDSL

./: Cargo.toml  README.md  THEORY.md  main.tex  operational.md  project-requirements.md
docs/: IBM_QUANTUM_INTEGRATION.md  PROJECT_PROPOSAL.md  data-marshalling-design.md  hybrid-design.md
examples/: bell_state.tgpu  bell_state_quantum.tgpu  bell_state_unix.tgpu  hybrid_simple.tgpu  hybrid_vqe.tgpu  simple_array.tgpu  simple_gpu.tgpu  test_loop.tgpu  with_print.tgpu
quarkdsl-web/: DOCUMENTATION_FEATURE.md  package-lock.json  package.json
quarkdsl-web/app/: globals.css  layout.tsx  page.tsx
quarkdsl-web/app/api/chat/: route.ts
quarkdsl-web/app/api/compile/: route.ts
quarkdsl-web/app/api/run/: route.ts
quarkdsl-web/components/: ChatInput.tsx  ChatMessageContent.tsx  DocumentationContent.tsx  DocumentationView.tsx  TableOfContents.tsx
quarkdsl-web/components/ui/: scroll-area.tsx
quarkdsl-web/lib/: codebase-search.ts  doc-navigation.ts  dynamic-indexer.ts  rehype-custom-slug.ts
quarkdsl-web/lib/vm/: ast.ts  compiler.ts  index.ts  interpreter.ts  ir.ts  lexer.ts  parser.ts  quantum.ts  test.ts
quarkdsl-web/public/: PROJECT_PROPOSAL.md  README.md  THEORY.md  codebase-index.json
quarkdsl-web/scripts/: index-codebase.js
src/: cli.rs  main.rs
src/backend/: mod.rs  orchestrator.rs  quantum.rs  wgsl.rs
src/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs  typecheck.rs
src/middle/: dump.rs  ir.rs  lower.rs  mod.rs  optimize.rs
